# kl05z-devboard-demo

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  doxygen.cmake  doxygen.conf
CMSIS/: cmsis_gcc.h
device/MKL05Z4/: MKL05Z4_flash.ld  flash_config.c  min_libc.S  min_libc.c  startup_MKL05Z4.c  system_MKL05Z4.c  system_MKL05Z4.h
frdm05-devboard-hardware/: fp-lib-table  frdm05-devboard-cache.lib  frdm05-devboard-rescue.lib  frdm05-devboard.kicad_pcb  frdm05-devboard.pro  frdm05-devboard.sch  sym-lib-table
frdm05-devboard-hardware/FRDM-KL05Z-Mockup/: KL05Z-Mockup.kicad_pcb  fp-lib-table
frdm05-devboard-hardware/bom/: ibom.html
frdm05-devboard-hardware/evalboard-gerbers/: fdrm05-devboard-B_Cu.gbr  fdrm05-devboard-B_Mask.gbr  fdrm05-devboard-B_SilkS.gbr  fdrm05-devboard-Edge_Cuts.gbr  fdrm05-devboard-F_Cu.gbr  fdrm05-devboard-F_Mask.gbr  fdrm05-devboard-F_SilkS.gbr  fdrm05-devboard-job.gbrjob  fdrm05-devboard.drl  frdm05-devboard-B_Cu.gbr  frdm05-devboard-B_Mask.gbr  frdm05-devboard-B_SilkS.gbr  frdm05-devboard-Edge_Cuts.gbr  frdm05-devboard-F_Cu.gbr  frdm05-devboard-F_Mask.gbr  frdm05-devboard-F_SilkS.gbr  frdm05-devboard-job.gbrjob  frdm05-devboard.drl
frdm05-devboard-hardware/frdm05-devboard-hardware.pretty/: 2041021-4.step  FDRM-KL05Z.kicad_mod  GLCD_PCD8544_BASE.kicad_mod  J_SMD_2041021-4-9_2.5_27.90_25_3.3.kicad_mod  Keyboard_resistive.kicad_mod  SKRPACE010.step  SKRPACE010.wrl  SW_SPST_PTS810_HandSoldering.kicad_mod  SeikoEpson-MC306.step  agieh.kicad_mod  prestiz.kicad_mod  wietkong.kicad_mod
frdm05-devboard-hardware/libraries/: 2041021-4.lib  frdm_kl05z.dcm  frdm_kl05z.lib  mikroBUS.dcm  mikroBUS.lib  nokia_5510.lib
frdm05-devboard-hardware/mikroBUS.pretty/: MIKROBUS_HOST_CONN.kicad_mod
src/drivers/: mma8451q.c  mma8451q.h  u8x8_mkl_hal.c  u8x8_mkl_hal.h  ws2812b.c  ws2812b.h
src/mcu-drivers/: adc.c  adc.h  delay.c  delay.h  gpio.c  gpio.h  i2c.c  i2c.h  pwm.c  pwm.h  spi.c  spi.h  uart.c  uart.h
src/project/: cmdline.c  cmdline.h  error_handler.h  main.c
toolchain-conf/: arm-none-eabi-gcc.cmake  armcc.cmake
